--- a/src/components/pos/order-panel/order-panel.component.html
+++ b/src/components/pos/order-panel/order-panel.component.html
@@ -97,7 +97,7 @@
                                   @if (displayItem.hasDiscount) { <span class="text-xs line-through text-gray-500">{{ (displayItem.originalTotalPrice) | currency:'BRL' }}</span> }
                                   <span class="font-medium">{{ (displayItem.totalPrice * displayItem.quantity) | currency:'BRL' }}</span>
                                   <button (click)="$event.stopPropagation(); openDiscountModal(displayItem)" class="text-gray-400 hover:text-white p-1" title="Aplicar desconto">
-                                    <svg class="w-4 h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM6.25 8.25a.75.75 0 100-1.5.75.75 0 000 1.5zm3.5.75a.75.75 0 01.75-.75h2a.75.75 0 010 1.5h-2a.75.75 0 01-.75-.75zm-4 3.5a.75.75 0 10-1.5 0 .75.75 0 001.5 0zm1.939-2.061a.75.75 0 010 1.06l-4.5 4.5a.75.75 0 11-1.06-1.06l4.5-4.5a.75.75 0 011.06 0zm7.622-2.939a.75.75 0 10-1.06-1.06l-4.5 4.5a.75.75 0 101.06 1.06l4.5-4.5z" clip-rule="evenodd" /></svg>
+                                    <svg class="w-4 h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path d="M3 3.5A1.5 1.5 0 014.5 2h6.879a1.5 1.5 0 011.06.44l5.854 5.853a1.5 1.5 0 010 2.122l-5.853 5.853a1.5 1.5 0 01-1.06.44H4.5A1.5 1.5 0 013 16.5v-13z" /><path d="M6.5 6.5a1 1 0 100-2 1 1 0 000 2z" /></svg>
                                   </button>
                                 </div>
                               </div>
@@ -127,7 +127,7 @@
                                   @if (displayItem.hasDiscount) { <span class="text-xs line-through text-gray-500">{{ displayItem.originalTotalPrice | currency:'BRL' }}</span> }
                                   <span class="font-medium ml-2">{{ (displayItem.item.price * displayItem.item.quantity) | currency:'BRL' }}</span>
                                   <button (click)="$event.stopPropagation(); openDiscountModal(displayItem)" class="text-gray-400 hover:text-white p-1" title="Aplicar desconto">
-                                    <svg class="w-4 h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM6.25 8.25a.75.75 0 100-1.5.75.75 0 000 1.5zm3.5.75a.75.75 0 01.75-.75h2a.75.75 0 010 1.5h-2a.75.75 0 01-.75-.75zm-4 3.5a.75.75 0 10-1.5 0 .75.75 0 001.5 0zm1.939-2.061a.75.75 0 010 1.06l-4.5 4.5a.75.75 0 11-1.06-1.06l4.5-4.5a.75.75 0 011.06 0zm7.622-2.939a.75.75 0 10-1.06-1.06l-4.5 4.5a.75.75 0 101.06 1.06l4.5-4.5z" clip-rule="evenodd" /></svg>
+                                    <svg class="w-4 h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path d="M3 3.5A1.5 1.5 0 014.5 2h6.879a1.5 1.5 0 011.06.44l5.854 5.853a1.5 1.5 0 010 2.122l-5.853 5.853a1.5 1.5 0 01-1.06.44H4.5A1.5 1.5 0 013 16.5v-13z" /><path d="M6.5 6.5a1 1 0 100-2 1 1 0 000 2z" /></svg>
                                   </button>
                                 </div>
                               </div>
